--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     justify-content: space-between;
     max-width: 1200px;
     width: 100%;
-    max-height: 40px;
+    max-height: 60px;
     margin-bottom: 100px
 }
 
@@ -52,7 +52,7 @@ input {
     display: flex;
     flex: 1;
     height: 230px;
-    justify-content: center;
+    justify-content: flex-end;
     
 }
 
@@ -91,11 +91,138 @@ input {
     width: 120px;
     height: 30px;
     border: 0;
-
 }
 
-img {
+.image_upper {
     border-radius: 5px
 }
 
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px
+}
 
+.random-info {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.info-random {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+    
+}
+
+.card-containers {
+    display: flex;
+    max-width: 750px;
+    height: 250px;
+    justify-content: space-between;
+    width: 100%;
+    
+}
+
+.card img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: #3882F6 2px solid;
+    border-radius: 8px
+}
+
+.random-p {
+    display: block;
+    text-align: center;
+}
+
+.quote-section {
+    background-color: #E5E7EB;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 100;
+    width: 500px;
+    align-self: center;
+    
+}
+
+.quote-container {
+    width: 650px;
+    display: flex;
+    flex-direction: column;
+}
+
+.thor {
+    align-self: flex-end;
+    margin-top: -50px;
+    margin-right: 60px;
+    font-weight: bold;
+    color: #1F2937;
+    font-size: 20px
+}
+
+.bottom-div {
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.cta_container {
+    background-color: #3882F6;
+    width: 750px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    gap: 100px
+}
+
+.call {
+    color: #F9FAF8;
+    height: 50px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.sign {
+    font-size: 14px;
+    margin: 0
+}
+
+.action {
+    margin: 0
+}
+
+.bottom-button {
+    border: #E5E7EB 1px solid;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    
+}
+
+.footer {
+    height: 80px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
